--- a/src/main/resources/static/auth/css/login.css
+++ b/src/main/resources/static/auth/css/login.css
@@ -2,6 +2,12 @@ body {
     background: linear-gradient(to right, #ef32d9, #89fffd);
     font-family: 'Arial', sans-serif;
     color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .form-container {
@@ -9,6 +15,7 @@ body {
     padding: 55px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 400px;
 }
 
 h2 {
@@ -56,46 +63,6 @@ h2 {
     text-decoration: underline;
 }
 
-.bg-image {
-    background-image: url('https://cdn.pixabay.com/photo/2017/01/06/19/15/woman-1958723_1280.jpg'); /* Example image */
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-}
-
-.overlay {
-    background: rgba(239, 50, 217, 0.5);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.container-fluid {
-    padding: 0;
-}
-
-
-.alert {
-    display: none;
-    margin-bottom: 1rem;
-    padding: 0.75rem 1.25rem;
-    border: 1px solid transparent;
-    border-radius: 0.375rem;
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
-}
-.alert.show {
-    display: block;
-}
-.alert.hidden {
-    opacity: 0;
-    transition: opacity 1s;
-}
-
-
 .required-field {
     border-color: #e74c3c;
 }
@@ -118,4 +85,3 @@ h2 {
 .input-error + .error-message {
     display: block;
 }
-
