--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -66,7 +66,7 @@
                         <button type="submit" class="btn btn-primary shadow-none" th:text="#{register.signUp.button}"></button>
                     </div>
                     <div class="text-center mt-3">
-                        <a href="#" class="text-decoration-none" th:text="#{register.signIn.link}"></a>
+                        <a th:href="@{/login}" class="text-decoration-none" th:text="#{register.signIn.link}"></a>
                     </div>
                 </form>
             </div>
