--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -23,7 +23,6 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto d-flex align-items-center">
-                    <!-- Help and Commands links -->
                     <li class="nav-item me-3">
                         <a class="nav-link" href="#">Help</a>
                     </li>
@@ -56,7 +55,7 @@
 </header>
 
 
-<main class="main-content container" th:fragment="content">
+<main class="main-content container" layout:fragment="content">
 </main>
 
 
