--- a/src/main/resources/static/layout/css/layout.css
+++ b/src/main/resources/static/layout/css/layout.css
@@ -1,5 +1,10 @@
 body {
     background-color: #ffe4e1;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .navbar {
@@ -19,9 +24,10 @@ footer {
     background-color: #ff69b4;
     color: #fff;
     padding: 15px 0;
-    position: absolute;
-    bottom: 0;
     width: 100%;
+    text-align: center;
+    position: relative;
+    bottom: 0;
 }
 
 .main-content {
