--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title th:text="#{register.title}"></title>
+    <title th:text="#{register.title}">Register</title>
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/auth/css/register.css}">
 </head>
@@ -27,32 +27,32 @@
                 <form id="registerForm" th:action="@{/register}" method="post" th:object="${registrationRequest}">
                     <div class="mb-3">
                         <label for="username" class="form-label" th:text="#{register.username.label}"></label>
-                        <input type="text" class="form-control" id="username" name="username" th:field="*{username}" placeholder="Enter your username"
+                        <input type="text" class="form-control" id="username" name="username" th:field="*{username}" th:placeholder="#{register.username.placeholder}"
                                th:classappend="${#fields.hasErrors('username')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label" th:text="#{register.email.label}"></label>
-                        <input type="email" class="form-control" id="email" name="email" th:field="*{email}" placeholder="Enter your email"
-                               th:classappend="${#fields.hasErrors('email')} ? 'input-error' : ''">
+                        <input type="email" class="form-control" id="email" name="email" th:field="*{email}"
+                               th:placeholder="#{register.email.placeholder}" th:classappend="${#fields.hasErrors('email')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label" th:text="#{register.password.label}"></label>
-                        <input type="password" class="form-control" id="password" name="password" th:field="*{password}" placeholder="Enter your password"
-                               th:classappend="${#fields.hasErrors('password')} ? 'input-error' : ''">
+                        <input type="password" class="form-control" id="password" name="password" th:field="*{password}"
+                               th:placeholder="#{register.password.placeholder}" th:classappend="${#fields.hasErrors('password')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
                     </div>
                     <div class="mb-3">
                         <label for="phoneNumber" class="form-label" th:text="#{register.phoneNumber.label}"></label>
-                        <input type="tel" class="form-control" id="phonenumber" name="phonenumber" th:field="*{phonenumber}" placeholder="Enter your phone number"
-                               th:classappend="${#fields.hasErrors('phonenumber')} ? 'input-error' : ''">
+                        <input type="tel" class="form-control" id="phonenumber" name="phonenumber" th:field="*{phonenumber}"
+                               th:placeholder="#{register.phoneNumber.placeholder}" th:classappend="${#fields.hasErrors('phonenumber')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('phonenumber')}" th:errors="*{phonenumber}"></div>
                     </div>
                     <div class="mb-3">
                         <label for="discordId" class="form-label" th:text="#{register.discordId.label}"></label>
                         <input type="text" class="form-control" id="discordid" name="discordid" th:field="*{discordid}" placeholder="Enter your Discord ID"
-                               th:classappend="${#fields.hasErrors('discordid')} ? 'input-error' : ''">
+                               th:placeholder="#{register.discordId.placeholder}" th:classappend="${#fields.hasErrors('discordid')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('discordid')}" th:errors="*{discordid}"></div>
                     </div>
                     <div class="form-check mb-3">
