--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -38,6 +38,11 @@
         <a th:href="@{/register}" class="text-decoration-none ms-2" th:text="#{login.register.link}"></a>
       </div>
     </form>
+
+    <div class="text-center mt-4">
+      <a href="/support" class="support-link" th:text="#{login.support.link}">Need support?</a>
+    </div>
+
   </div>
 </div>
 
