--- a/src/main/resources/templates/general/main.html
+++ b/src/main/resources/templates/general/main.html
@@ -102,6 +102,23 @@
             Start using our bot now and make your server a better place. Click <a href="#">here</a> for more information.
         </p>
     </section>
+
+
+    <section class="documentation-section">
+        <h2>Documentation</h2>
+        <p>Find detailed guides and documentation on how to use our bot and its features.</p>
+        <a href="#" class="btn btn-primary">Go to Documentation</a>
+    </section>
+
+    <section class="social-media-section">
+        <h2>Follow Us</h2>
+        <ul>
+            <li><a href="https://instagram.com/example" target="_blank" class="bi bi-instagram">İnstagram</a></li>
+            <li><a href="https://discord.gg/example" target="_blank" class="bi bi-discord">Discord</a></li>
+            <li><a href="https://github.com/example" target="_blank" class="bi bi-github">GitHub</a></li>
+        </ul>
+    </section>
+
 </main>
 
 </body>
