--- a/src/main/resources/static/auth/css/register.css
+++ b/src/main/resources/static/auth/css/register.css
@@ -66,7 +66,7 @@ h2 {
 .overlay {
     background: rgba(239, 50, 217, 0.5);
     width: 100%;
-    height: 100%;
+    height: 109%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -117,5 +117,51 @@ h2 {
 
 .input-error + .error-message {
     display: block;
+}
+
+.form-check {
+    margin-bottom: 10px;
+}
+
+.form-check-input {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    border: 2px solid #6c757d;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.form-check-input:checked {
+    background-color: #6f42c1;
+    border-color: #6f42c1;
+}
+
+.form-check-label {
+    margin-left: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.form-check-label:hover {
+    color: #6f42c1;
+}
+
+.form-label {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #6f42c1;
+}
+
+
+.form-container {
+    padding: 40px;
+    margin-top: 15px;
+    background-color: #f8f9fa;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
