--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title th:text="#{login.title}">Login</title>
+  <title th:text="#{login.title}"></title>
   <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css}" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/auth/css/login.css}">
+  <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css}">
 </head>
 <body>
 <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
@@ -16,31 +17,35 @@
       <span th:text="${errorMessage}"></span>
     </div>
 
-
-    <form id="loginForm" th:action="@{/login}" method="post" th:object="${authentication}" onsubmit="return validateForm()">
-      <div class="mb-3">
-        <label for="email" class="form-label" th:text="#{login.email.label}"></label>
+    <form id="loginForm" th:action="@{/login}" method="post" th:object="${authentication}"
+          onsubmit="return validateForm()">
+      <div class="input-with-icon">
         <input type="email" class="form-control" id="email" name="email" th:field="*{email}"
                th:placeholder="#{login.email.placeholder}">
+        <i class="fas fa-envelope"></i>
         <div id="emailError" class="error-message"></div>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label" th:text="#{login.password.label}"></label>
+
+      <div class="input-with-icon">
         <input type="password" class="form-control" id="password" name="password" th:field="*{password}"
                th:placeholder="#{login.password.placeholder}">
+        <i class="fas fa-lock"></i>
         <div id="passwordError" class="error-message"></div>
       </div>
+
       <div class="d-grid">
         <button type="submit" class="btn btn-primary shadow-none" th:text="#{login.signIn.button}"></button>
       </div>
+
       <div class="text-center mt-3">
         <a th:href="@{/forgot-password}" class="text-decoration-none" th:text="#{login.forgotPassword.link}"></a>
-        <a th:href="@{/register}" class="text-decoration-none ms-2" th:text="#{login.register.link}"></a>
+        <a th:href="@{/register}" class="text-decoration-none ms-2"
+           th:text="#{login.register.link}"></a>
       </div>
     </form>
 
     <div class="text-center mt-4">
-      <a href="/support" class="support-link" th:text="#{login.support.link}">Need support?</a>
+      <a href="/support" class="support-link" th:text="#{login.support.link}"></a>
     </div>
 
   </div>
