--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -6,6 +6,7 @@
     <title th:text="#{register.title}">Register</title>
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/auth/css/register.css}">
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css}">
 </head>
 <body>
 <div class="container-fluid">
@@ -20,32 +21,32 @@
         <!-- Right Form Section -->
         <div class="col-md-6 d-flex align-items-center justify-content-center">
             <div class="form-container">
-                <h2 class="text-center mb-4" th:text="#{register.title}">Sign Up</h2>
-                <div id="alertMessage" class="alert">
+                <h2 id="signup-title" class="text-center mb-4" th:text="#{register.title}"></h2>
+                <div id="alertMessage" class="alert d-none">
                     <span th:text="#{register.mustbeaccept}"></span>
                 </div>
                 <form id="registerForm" th:action="@{/register}" method="post" th:object="${registrationRequest}">
-                    <div class="mb-3">
-                        <label for="username" class="form-label" th:text="#{register.username.label}"></label>
+                    <div class="mb-3 input-group">
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
                         <input type="text" class="form-control" id="username" name="username" th:field="*{username}" th:placeholder="#{register.username.placeholder}"
                                th:classappend="${#fields.hasErrors('username')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
                     </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label" th:text="#{register.email.label}"></label>
+                    <div class="mb-3 input-group">
+                        <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                         <input type="email" class="form-control" id="email" name="email" th:field="*{email}"
                                th:placeholder="#{register.email.placeholder}" th:classappend="${#fields.hasErrors('email')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
                     </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label" th:text="#{register.password.label}"></label>
+                    <div class="mb-3 input-group">
+                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
                         <input type="password" class="form-control" id="password" name="password" th:field="*{password}"
                                th:placeholder="#{register.password.placeholder}" th:classappend="${#fields.hasErrors('password')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
                     </div>
                     <div class="mb-3">
                         <label for="interests" class="form-label" th:text="#{register.interests.label}">Interests / Activities</label>
-                        <div id="interests">
+                        <div id="interests" class="interests-container">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="interest1" name="interests" th:field="*{interests.activities}" value="Software">
                                 <label class="form-check-label" for="interest1" th:text="#{register.interests.software}"></label>
@@ -68,14 +69,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="phoneNumber" class="form-label" th:text="#{register.phoneNumber.label}"></label>
+                    <div class="mb-3 input-group">
+                        <span class="input-group-text"><i class="fas fa-phone"></i></span>
                         <input type="tel" class="form-control" id="phonenumber" name="phonenumber" th:field="*{phonenumber}"
                                th:placeholder="#{register.phoneNumber.placeholder}" th:classappend="${#fields.hasErrors('phonenumber')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('phonenumber')}" th:errors="*{phonenumber}"></div>
                     </div>
-                    <div class="mb-3">
-                        <label for="discordId" class="form-label" th:text="#{register.discordId.label}"></label>
+                    <div class="mb-3 input-group">
+                        <span class="input-group-text"><i class="fab fa-discord"></i></span>
                         <input type="text" class="form-control" id="discordid" name="discordid" th:field="*{discordid}" placeholder="Enter your Discord ID"
                                th:placeholder="#{register.discordId.placeholder}" th:classappend="${#fields.hasErrors('discordid')} ? 'input-error' : ''">
                         <div class="error-message" th:if="${#fields.hasErrors('discordid')}" th:errors="*{discordid}"></div>
