--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -11,11 +11,10 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container d-flex align-items-center">
-            <a class="navbar-brand me-4" href="#">
-                <img src="/path/to/logo.png" alt="Logo" style="height: 40px; width: auto;">
+            <a class="navbar-brand" href="#">
+                <img src="/path/to/logo.png" alt="Logo">
+                Moderation Discord Bot
             </a>
-
-            <span class="navbar-brand me-4">Moderation Discord Bot</span>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,6 +27,9 @@
                     </li>
                     <li class="nav-item me-3">
                         <a class="nav-link" href="#">Commands</a>
+                    </li>
+                    <li class="nav-item me-3">
+                        <a class="nav-link contact-link" href="#">Contact</a>
                     </li>
                 </ul>
 
@@ -53,7 +55,6 @@
         </div>
     </nav>
 </header>
-
 
 <main class="main-content container" layout:fragment="content">
 </main>
