--- a/src/main/resources/templates/auth/forgot-password.html
+++ b/src/main/resources/templates/auth/forgot-password.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text="#{forgotPassword.title}">Forgot Password</title>
   <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css}" rel="stylesheet">
-  <link rel="stylesheet" th:href="@{/auth/css/login.css}">
+  <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css}">
+  <link rel="stylesheet" th:href="@{/auth/css/forgot-password.css}">
 </head>
 <body>
 <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
   <div class="form-container">
-    <h2 class="text-center mb-4" th:text="#{forgotPassword.title}">Forgot Password</h2>
+    <h2 class="text-center mb-4" th:text="#{forgotPassword.title}"></h2>
 
     <div th:if="${errorMessage}" class="alert alert-danger text-center" role="alert">
       <span th:text="${errorMessage}"></span>
@@ -22,15 +23,20 @@
     <form id="forgotPasswordForm" th:action="@{/forgot-password}" method="post" onsubmit="return validateForgotPasswordForm()">
       <div class="mb-3">
         <label for="email" class="form-label" th:text="#{forgotPassword.email.label}"></label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
+        <div class="input-group">
+            <span class="input-group-text">
+                <i class="fa fa-envelope"></i>
+            </span>
+          <input type="email" class="form-control custom-form-control" id="email" name="email" placeholder="Enter your email">
+        </div>
         <div id="emailError" class="error-message"></div>
       </div>
       <div class="d-grid">
-        <button type="submit" class="btn btn-primary shadow-none" th:text="#{forgotPassword.submit.button}"></button>
+        <button type="submit" class="btn btn-primary custom-btn-primary" th:text="#{forgotPassword.submit.button}"></button>
       </div>
       <div class="text-center mt-3">
-        <a th:href="@{/login}" class="text-decoration-none" th:text="#{forgotPassword.login.link}"></a>
-        <a th:href="@{/register}" class="text-decoration-none ms-2" th:text="#{forgotPassword.register.link}"></a>
+        <a th:href="@{/login}" class="text-decoration-none custom-link" th:text="#{forgotPassword.login.link}"></a>
+        <a th:href="@{/register}" class="text-decoration-none ms-2 custom-link" th:text="#{forgotPassword.register.link}"></a>
       </div>
     </form>
   </div>
