--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -17,19 +17,17 @@
       <span th:text="${errorMessage}"></span>
     </div>
 
-    <form id="loginForm" th:action="@{/login}" method="post" th:object="${authentication}"
-          onsubmit="return validateForm()">
+    <form id="loginForm" th:action="@{/login}" method="post" th:object="${authentication}" onsubmit="return validateForm()">
       <div class="input-with-icon">
-        <input type="email" class="form-control" id="email" name="email" th:field="*{email}"
-               th:placeholder="#{login.email.placeholder}">
+        <input type="email" class="form-control" id="email" name="email" th:field="*{email}" th:placeholder="#{login.email.placeholder}">
         <i class="fas fa-envelope"></i>
         <div id="emailError" class="error-message"></div>
       </div>
 
-      <div class="input-with-icon">
-        <input type="password" class="form-control" id="password" name="password" th:field="*{password}"
-               th:placeholder="#{login.password.placeholder}">
+      <div class="input-with-icon password-container">
+        <input type="password" class="form-control" id="password" name="password" th:field="*{password}" th:placeholder="#{login.password.placeholder}">
         <i class="fas fa-lock"></i>
+        <button type="button" class="fas fa-eye toggle-password" onclick="togglePassword()"></button>
         <div id="passwordError" class="error-message"></div>
       </div>
 
@@ -39,8 +37,7 @@
 
       <div class="text-center mt-3">
         <a th:href="@{/forgot-password}" class="text-decoration-none" th:text="#{login.forgotPassword.link}"></a>
-        <a th:href="@{/register}" class="text-decoration-none ms-2"
-           th:text="#{login.register.link}"></a>
+        <a th:href="@{/register}" class="text-decoration-none ms-2" th:text="#{login.register.link}"></a>
       </div>
     </form>
 
@@ -50,7 +47,6 @@
 
   </div>
 </div>
-
 <script th:src="@{https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js}"></script>
 <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js}"></script>
 <script th:src="@{auth/js/login.js}"></script>
